# rustopals

./: .gitignore  Cargo.toml  LICENSE  README.md
chal_1_1/: Cargo.toml
chal_1_1/src/: main.rs
src/: blocky.rs  lib.rs  main.rs  raw.rs
test_data/: cybertruck_logo.txt
tools/: gen_64_table.py  generate_char_freq.py
