[package]
name = "rustopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
aes = "0.8.4"
cipher = {version = "0.4", features=["block-padding"]}
clap = {version = "4.5", features=["derive"]}
rayon = "1.10.0" # Provides parallelizable iters
